syntax = "proto3";

option csharp_namespace = "OrderService";

import "google/protobuf/timestamp.proto";

package order;

service OrderGrpc {
  rpc CreateOrder (CreateOrderRequest) returns (CreateOrderResponse);
  rpc GetOrder (GetOrderRequest) returns (GetOrderResponse);
}

message CreateOrderRequest {
  repeated OrderItemDto items = 1;
  int32 order_status = 2;
}

message OrderItemDto {
  int32 product_id = 1;
  int32 quantity = 2;
}

message CreateOrderResponse {
  int32 id = 1;
  bool success = 2;
}

message GetOrderRequest {
  int32 order_id = 1;
}

message GetOrderResponse {
  int32 id = 1;
  int32 status = 2;
  repeated ProductDto products = 3;
  google.protobuf.Timestamp created_at = 5;
  double total_amount = 6;
}

message ProductDto {
  int32 id = 1;
  string name = 2;
  string description = 3;
  double quantity = 4;
  double total_amount = 5;
}